src/index.css
/* ========== Global Styles ========== */
:root {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

body {
  margin: 0;
  background-color: #1e1200;
  color: #ffffff;
  padding: 0;
  box-sizing: border-box;
}

h1, h2, h3, p {
  font-family: Helvetica, Arial, sans-serif;
  margin: 0;
  padding-left: 20px;
}

img {
  display: block;
  max-width: 100%;
}

* {
  box-sizing: border-box;
}

main {
  padding-top: 60px;
  padding: 20 0 20 20;
}

/* ========== Movie card styles ========== */
.movie-container {
  display: grid;
  grid-template-columns: repeat(4, 1fr); /* Default: 4 columns for desktop */
  gap: 20px;
  padding: 20px;
  margin: 0 auto; 
  max-width: 100%; 
}

.movie-card {
  background-color: #2a1800;
  border-radius: 10px;
  overflow: hidden;
  position: relative;
  text-align: center;
  transition: transform 0.3s, box-shadow 0.3s;
}

.movie-card:hover {
  transform: scale(1.05);
  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
}

.movie-art-container {
  position: relative;
  width: 100%;
  background-color: #000; 
  transition: opacity 0.5s ease;
  z-index: 1;
}

.movie-art-container:hover .movie-art {
  opacity: 0.5;
  background-color: #000;
}

.movie-art {
  display: block;
  width: 100%;
  opacity: 1; /* Fully visible */
}

.movie-text-container {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  opacity: 0; /* Hidden by default */
  text-align: center;
  color: #ffffff;
  transition: opacity 0.5s ease;
  z-index: 2; /* Place text on top of movie-art */
}

.movie-art-container:hover .movie-text-container {
  opacity: 1; /* Show text on hover */
  color: #ffffff;
}

.movie-title {
  padding-top: 20px;
  font-size: 18px;
  font-weight: bold;
  color: #ffffff;
}

.movie-release-date {
  font-size: 14px;
  color: #ccc;
}

/* ========== Header links ========== */

.header-links {
  display: flex;
  align-items: center;  
  gap: 40px;
  padding: 20px 20px;
  position: fixed; 
  top: 0;
  left: 0;
  width: 100%; 
  background-color: #1e1200; 
}

.header-links a {
  text-decoration: none; 
  color: #ffffff; 
  font-size: 18px; 
  font-weight: bold;
}

.header-links a:hover {
  color: #fd6f00; 
}

/* ========== Page not found ========== */

.page-not-found {
  display: flex;
  flex-direction: column; 
  align-items: center;
  justify-content: center; 
  text-align: center; 
  padding: 20px; 
  background-color: #1e1200; 
  color: #ffffff;
}
.page-not-found h1,
.page-not-found h2,
.page-not-found p,
.page-not-found a {
  margin: 20px 0; 
}

/* ========== Move info ========== */

.movie-info h1,
.movie-info h2,
.movie-info h3,
.movie-info p {
  margin: 20px 10px; 
}
.movie-info h3 {
color: #fd6f00;
}
.movie-info h1 {
  font-style: italic;
}

/* ========== Footer section ========== */
.footer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  padding: 20px;
  color: #FFA5A5;
}

.footer-content {
  display: flex;
  align-items: center;
  min-width: 44px;
  min-height: 44px;
}

.footer-logo {
  width: 30px;
  margin-right: 5px;
}

.footer a {
  color: white;
  text-decoration: none;
  transition: color 0.3s ease;
}

.footer a:hover {
  text-decoration: underline;
}

.footer-copyright {
  margin-top: 10px;
  font-size: 14px;
}

/* ========== Responsive layout ========== */

/* Mobile: 1 column */
@media (max-width: 500px) {
  .movie-container {
    grid-template-columns: 1fr;
    gap: 20px;
  }
  .header-links {
  justify-content: center;
  }
  h1 {
    text-align: center;
  }
  .movie-art {
    opacity: 0.5; /* Darker image */
  }
  .movie-text-container {
    opacity: 1; /* Visible text */
  }
  .movie-title {
    font-size: 18px;
    font-weight: bold;
  }
  .movie-release-date {
    font-size: 14px;
    color: #ccc;
  }
}

/* Tablet: 2 columns */
@media (min-width: 501px) and (max-width: 1024px) {
  .header-links {
    justify-content: center;
  }
  h1 {
    text-align: center;
  }
  .movie-container {
    grid-template-columns: repeat(2, 1fr);
    gap: 20px;
  }
  .movie-art {
    opacity: 0.5; /* Darker image */
  }
  .movie-text-container {
    opacity: 1; /* Visible text */
  }
  .movie-title {
    font-size: 18px;
    font-weight: bold;
  }
  .movie-release-date {
    font-size: 14px;
    color: #ccc;
  }
}

/* Desktop: 4 columns */
@media (min-width: 1025px) {
  .movie-container {
    grid-template-columns: repeat(4, 1fr);
    gap: 20px;
  }
}

